Fixed spring-neo4j compilation errors on master